Modified img src

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <div class="introduction" id="introduction-section">
         <div class="img">
-            <img src="/img/Screenshot from 2024-01-09 23-40-35.png">
+            <img src="img/Screenshot from 2024-01-09 23-40-35.png">
         </div>
         <div class="text" id="color2">
             <div style="font-weight: bold;">Hello, I'm Manish!</div>
@@ -42,21 +42,21 @@
     <div class="hobbies" id="hobbies-section">
         <div class="heading" id="color2">Hobbies</div>
         <div class="hobbies-list">
-            <a href="/anime.html">
+            <a href="anime.html">
                 <div class="anime">
-                    <img src="/img/anime logo.png" alt="child goku png">
+                    <img src="img/anime logo.png" alt="child goku png">
                     <p>Anime</p>
                 </div>
             </a>
-            <a href="/music.html">
+            <a href="music.html">
                 <div class="music">
-                    <img src="/img/music logo.png" alt="music logo">
+                    <img src="img/music logo.png" alt="music logo">
                     <p>Music</p>
                 </div>
             </a>
-            <a href="########">
+            <a href="novel.html">
                 <div class="novel">
-                    <img src="/img/novel logo.png" alt="novel logo">
+                    <img src="img/novel logo.png" alt="novel logo">
                     <p>Novel</p>
                 </div>
             </a>
@@ -66,7 +66,7 @@
     <div class="projects" id="project-section" >
         <div class="heading" id="color2">Projects</div>
         <div class="wids" id="color2">
-            <img src="/img/data science logo.png" alt="dots connecting with each other looking sci-fi">
+            <img src="img/data science logo.png" alt="dots connecting with each other looking sci-fi">
             <div id="description">
                 <div style="font-weight: bold;">Web Crawler And Scrapper | Winter in Data Science, IIT Bombay</div>
                 Creation of a web crawler using Python and its powerful
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="etch-a-sketch" id="color2">
-            <img src="/img/etch-a-sketch logo.png" alt="a brush with some paint">
+            <img src="img/etch-a-sketch logo.png" alt="a brush with some paint">
             <div class="description">
                 <div style="font-weight: bold;">Etch-a-Sketch</div> 
                 This project is a web-based implementation of the classic Etch-a-Sketch toy. <br>It allows users to create drawings by moving a cursor around a grid.<br> And customizing the cursor's color and size.
