--- a/anime.html
+++ b/anime.html
@@ -55,7 +55,7 @@
     </div>
     <div class="footer">
         <div class="home"><a href="index.html">Return Home</a></div>
-        <div class="next"><a href="/pages/music.html">Music</a></div>
+        <div class="next"><a href="music.html">Music</a></div>
     </div>
 </body>
 </html>
