--- a/music.html
+++ b/music.html
@@ -85,7 +85,7 @@
     </div>
     <div class="footer">
             <div class="home"><a href="index.html">Return Home</a></div>
-            <div class="next"><a href="pages/novel.html">Novel</a></div>
+            <div class="next"><a href="novel.html">Novel</a></div>
     </div>
 </body>
 </html>
