--- a/music.html
+++ b/music.html
@@ -84,8 +84,8 @@
         </section>
     </div>
     <div class="footer">
-            <div class="home"><a href="index.html">Return Home</a></div>
-            <div class="next"><a href="novel.html">Novel</a></div>
+            <div class="home"><a href="/index.html">Return Home</a></div>
+            <div class="next"><a href="/novel.html">Novel</a></div>
     </div>
 </body>
 </html>
