--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music | Hobbies</title>
-    <link rel="stylesheet" href="css/music.css">
+    <link rel="stylesheet" href="/css/music.css">
 </head>
 <body>
     <div class="header">
