--- a/anime.html
+++ b/anime.html
@@ -16,7 +16,7 @@
     <div class="list">
         <div class="heading">My All-Time Top Five Favorites</div>
         <div class="item">
-            <img src="/img/dragon-ball image.jpeg" alt="whole dragon-ball cast">
+            <img src="img/dragon-ball image.jpeg" alt="whole dragon-ball cast">
             
             <div>
                 <div style="font-weight: bold; font-size: large;">DRAGON BALL</div>
@@ -55,7 +55,7 @@
     </div>
     <div class="footer">
         <div class="home"><a href="/index.html">Return Home</a></div>
-        <div class="next"><a href="/music.html">Music</a></div>
+        <div class="next"><a href="music.html">Music</a></div>
     </div>
 </body>
 </html>
