--- a/music.html
+++ b/music.html
@@ -23,8 +23,8 @@
                 </div>
             </div>
             <div class="arrow">
-                <a href="#Song-5"><img src="/img/previous-icon.png" alt="left arrow"></a>
-                <a href="#Song-2"><img src="/img/next-button.png" alt="right arrow"></a>
+                <a href="#Song-5"><img src="img/previous-icon.png" alt="left arrow"></a>
+                <a href="#Song-2"><img src="img/next-button.png" alt="right arrow"></a>
             </div>
         </section>
         <section id="Song-2">
@@ -37,8 +37,8 @@
                 </div>
             </div>
             <div class="arrow">
-                <a href="#Song-1"><img src="/img/previous-icon.png" alt="left arrow"></a>
-                <a href="#Song-3"><img src="/img/next-button.png" alt="right arrow"></a>
+                <a href="#Song-1"><img src="img/previous-icon.png" alt="left arrow"></a>
+                <a href="#Song-3"><img src="img/next-button.png" alt="right arrow"></a>
             </div>
         </section>
         <section id="Song-3">
@@ -50,8 +50,8 @@
                 </div>
             </div>
             <div class="arrow">
-                <a href="#Song-2"><img src="/img/previous-icon.png" alt="left arrow"></a>
-                <a href="#Song-4"><img src="/img/next-button.png" alt="right arrow"></a>
+                <a href="#Song-2"><img src="img/previous-icon.png" alt="left arrow"></a>
+                <a href="#Song-4"><img src="img/next-button.png" alt="right arrow"></a>
             </div>
         </section>
         <section id="Song-4">
@@ -64,8 +64,8 @@
                 </div>
             </div>
             <div class="arrow">
-                <a href="#Song-3"><img src="/img/previous-icon.png" alt="left arrow"></a>
-                <a href="#Song-5"><img src="/img/next-button.png" alt="right arrow"></a>
+                <a href="#Song-3"><img src="img/previous-icon.png" alt="left arrow"></a>
+                <a href="#Song-5"><img src="img/next-button.png" alt="right arrow"></a>
             </div>
         </section>
         <section id="Song-5">
@@ -78,14 +78,14 @@
                 </div>
             </div>
             <div class="arrow">
-                <a href="#Song-4"><img src="/img/previous-icon.png" alt="left arrow"></a>
-                <a href="#Song-1"><img src="/img/next-button.png" alt="right arrow"></a>
+                <a href="#Song-4"><img src="img/previous-icon.png" alt="left arrow"></a>
+                <a href="#Song-1"><img src="img/next-button.png" alt="right arrow"></a>
             </div>
         </section>
     </div>
     <div class="footer">
             <div class="home"><a href="/index.html">Return Home</a></div>
-            <div class="next"><a href="novel.html">Novel</a></div>
+            <div class="next"><a href="/novel.html">Novel</a></div>
     </div>
 </body>
 </html>
