--- a/anime.html
+++ b/anime.html
@@ -16,7 +16,7 @@
     <div class="list">
         <div class="heading">My All-Time Top Five Favorites</div>
         <div class="item">
-            <img src="img/dragon-ball image.jpeg" alt="whole dragon-ball cast">
+            <img src="/img/dragon-ball image.jpeg" alt="whole dragon-ball cast">
             
             <div>
                 <div style="font-weight: bold; font-size: large;">DRAGON BALL</div>
