--- a/anime.html
+++ b/anime.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="footer">
-        <div class="home"><a href="index.html">Return Home</a></div>
+        <div class="home"><a href="../index.html">Return Home</a></div>
         <div class="next"><a href="music.html">Music</a></div>
     </div>
 </body>
